--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,9 @@ dependencies:
   provider: ^6.0.5
   http: ^0.13.5
 
-  easy_sidemenu: ^0.4.1+1
+  firebase_ui_firestore: ^1.2.8
   cloud_firestore: ^4.4.3
+  firebase_ui_auth: ^1.1.14
 
 dev_dependencies:
   flutter_test:
