--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,8 @@
 **/android/**/GeneratedPluginRegistrant.java
 
 # iOS/XCode related
+**/ios/firebase-debug.log
+**/ios/firebase_app_id_file.json
 **/ios/**/*.mode1v3
 **/ios/**/*.mode2v3
 **/ios/**/*.moved-aside
