--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,6 @@ dependencies:
   firebase_core: ^2.4.1
   google_sign_in: ^5.4.4
   provider: ^6.0.5
-  http: ^0.13.5
-
   firebase_ui_firestore: ^1.2.8
   cloud_firestore: ^4.4.3
   firebase_ui_auth: ^1.1.14
@@ -81,17 +79,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+     - family: Abel
+       fonts:
+         - asset: fonts/Abel-Regular.ttf
+     - family: Quicksand
+       fonts:
+         - asset: fonts/Quicksand-SemiBold.ttf
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
