--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   firebase_ui_auth: ^1.1.14
   firebase_storage: ^11.0.14
   image_picker: ^0.8.6+3
+  google_maps_flutter: ^2.2.5
+  geolocator: ^9.0.2
 
 dev_dependencies:
   flutter_test:
