--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   firebase_storage: ^11.0.14
   image_picker: ^0.8.6+3
   google_maps_flutter: ^2.2.5
-  geolocator: ^9.0.2
+  dynamic_color: ^1.6.2
 
 dev_dependencies:
   flutter_test:
