artist page and search changes, user properties

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   image_picker: ^0.8.6+3
   google_maps_flutter: ^2.2.5
   dynamic_color: ^1.6.2
+  url_launcher: ^6.1.10
 
 dev_dependencies:
   flutter_test:
