--- a/firebase.json
+++ b/firebase.json
@@ -8,13 +8,16 @@
   },
   "emulators": {
     "auth": {
-
+      "host": "192.168.2.191",
+      "port": 9099
     },
     "firestore": {
-
+      "host": "192.168.2.191",
+      "port": 8080
     },
     "storage": {
-
+      "host": "192.168.2.191",
+      "port": 9199
     },
     "ui": {
       "enabled": true
