--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   dynamic_color: ^1.6.2
   url_launcher: ^6.1.10
   qr_flutter: ^4.0.0
+  qr_code_scanner: ^1.0.1
 
 
 dev_dependencies:
